--- a/img/bg-img/.picasa.ini
+++ b/img/bg-img/.picasa.ini
@@ -9,3 +9,23 @@ backuphash=57257
 backuphash=25512
 [side9.jpg]
 backuphash=10335
+[pkeg1.jpeg]
+backuphash=29932
+[pkeg2.jpeg]
+backuphash=51680
+[pkeg3.jpeg]
+backuphash=17365
+[pkeg4.jpeg]
+backuphash=54585
+[pkeg5.jpeg]
+backuphash=56169
+[pkeg6.jpeg]
+backuphash=55701
+[pkeg7.jpeg]
+backuphash=40014
+[pkeg8.jpeg]
+backuphash=26248
+[pkeg9.jpeg]
+backuphash=12087
+[pkeg10.jpeg]
+backuphash=60290
