--- a/img/bg-img/.picasaoriginals/.picasa.ini
+++ b/img/bg-img/.picasaoriginals/.picasa.ini
@@ -40,3 +40,63 @@ moddate=85d85f8b7df9d801
 width=1920
 height=1080
 textactive=0
+[pkeg1.jpeg]
+filters=Border=1,8.771930,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=ffc171a8eb5ad901
+width=906
+height=971
+textactive=0
+[pkeg2.jpeg]
+filters=Border=1,7.602339,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=641485afeb5ad901
+width=903
+height=968
+textactive=0
+[pkeg3.jpeg]
+filters=Border=1,7.017544,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=286d6db7eb5ad901
+width=906
+height=966
+textactive=0
+[pkeg4.jpeg]
+filters=Border=1,7.017544,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=12544abfeb5ad901
+width=903
+height=966
+textactive=0
+[pkeg5.jpeg]
+filters=Border=1,7.017544,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=7ea2d2c5eb5ad901
+width=906
+height=971
+textactive=0
+[pkeg6.jpeg]
+filters=Border=1,7.017544,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=9d5e68cceb5ad901
+width=903
+height=966
+textactive=0
+[pkeg7.jpeg]
+filters=Border=1,7.602339,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=c89463d3eb5ad901
+width=906
+height=971
+textactive=0
+[pkeg8.jpeg]
+filters=Border=1,7.602339,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=93e9c0daeb5ad901
+width=903
+height=971
+textactive=0
+[pkeg9.jpeg]
+filters=Border=1,8.187135,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=aa5b83e1eb5ad901
+width=903
+height=968
+textactive=0
+[pkeg10.jpeg]
+filters=Border=1,7.017544,0.000000,0.000000,00000000,00ffffff,0.000000;
+moddate=a974bbe8eb5ad901
+width=903
+height=963
+textactive=0
